--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar class="header mat-elevation-z4">
   <span>
-    <a>
+    <a routerLink='/'>
       <img class='logo' src="assets/img/logo.png" alt="logo" title="logo">
     </a>
   </span>
   <span class="title-group">
     <a>
       <i class="material-icons">home</i>
-      Crud Application
+      Inicio
     </a>
   </span>
 </mat-toolbar>
