--- a/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button (click)='navigateToProductCreate()'>
-  Novo Produto
-</button>
+<button mat-raised-button (click)="navigateToProductCreate()" color="primary">New Product</button>
+
+<app-product-read></app-product-read>
