--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -1,1 +1,14 @@
-<p>product-update works!</p>
+<mat-card>
+  <mat-card-title> Update Product </mat-card-title>
+  <form>
+    <mat-form-field>
+      <input matInput placeholder="Name" [(ngModel)]="product.name" name="name" />
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Price (R$)" [(ngModel)]="product.price" name="price" />
+    </mat-form-field>
+  </form>
+  <button mat-raised-button (click)="updateProduct()" color="primary">create</button>
+
+  <button mat-raised-button (click)="cancel()">cancel</button>
+</mat-card>
