change button text

--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -8,7 +8,7 @@
       <input matInput placeholder="Price (R$)" [(ngModel)]="product.price" name="price" />
     </mat-form-field>
   </form>
-  <button mat-raised-button (click)="updateProduct()" color="primary">create</button>
+  <button mat-raised-button (click)="updateProduct()" color="primary">update</button>
 
   <button mat-raised-button (click)="cancel()">cancel</button>
 </mat-card>
