--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-title> New Product </mat-card-title>
-  <form>
+  <form class="form">
     <mat-form-field>
       <input matInput placeholder="Name" [(ngModel)]="product.name" name="name" />
     </mat-form-field>
@@ -8,7 +8,7 @@
       <input matInput placeholder="Price (R$)" [(ngModel)]="product.price" name="price" />
     </mat-form-field>
   </form>
-  <button mat-raised-button (click)="createProduct()" color="primary">create</button>
+  <button class="form-button" mat-raised-button (click)="createProduct()" color="primary">create</button>
 
-  <button mat-raised-button (click)="cancel()">cancel</button>
+  <button class="form-button" mat-raised-button (click)="cancel()">cancel</button>
 </mat-card>
