--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -25,7 +25,7 @@
         <a routerLink="/products/update/{{ prod.id }}" class="edit">
           <i class="material-icons">edit</i>
         </a>
-        <a routerLink="" class="delete">
+        <a routerLink="/products/delete/{{ prod.id }}" class="delete">
           <i class="material-icons">delete</i>
         </a>
       </td>
