--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -25,3 +25,13 @@ body {
 .form-button {
   margin: 20px 15px 0 0 !important;
 }
+
+.msg-success {
+  background-color: #28a745;
+  color: #fff;
+}
+
+.msg-error {
+  background-color: rgb(227, 94, 107);
+  color: #fff;
+}
