--- a/frontend/src/app/components/template/header/header.component.scss
+++ b/frontend/src/app/components/template/header/header.component.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
+    color: #333;
   }
 
   .logo {
@@ -14,6 +15,8 @@
 
   .title-group {
     padding-left: 25px;
-    i { padding-right: 5px; }
+    i {
+      padding-right: 5px;
+    }
   }
 }
